objects/ssot__CoverageBenefitVerificationRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizedPrescriptionId__c</fullName>
        <label>Authorized Prescription</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthorizedPrescriptionObject__c</fullName>
        <label>Authorized Prescription Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BenefitCategoryCode__c</fullName>
        <label>Benefit Category Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillablePeriodEndDateTime__c</fullName>
        <label>Billable Period End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__BillablePeriodStartDateTime__c</fullName>
        <label>Billable Period Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageBenefitId__c</fullName>
        <label>Coverage Benefit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnteredById__c</fullName>
        <label>Entered By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnteredByObject__c</fullName>
        <label>Entered By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Coverage Benefit Verification Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MemberPlanId__c</fullName>
        <label>Member Plan</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalPrescriptionId__c</fullName>
        <label>Original Prescription</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OriginalPrescriptionObject__c</fullName>
        <label>Original Prescription Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayerId__c</fullName>
        <label>Payer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriberId__c</fullName>
        <label>Prescriber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityCodeId__c</fullName>
        <label>Priority Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestDate__c</fullName>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedById__c</fullName>
        <label>Requested By</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCode__c</fullName>
        <label>Status Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerificationStatus__c</fullName>
        <label>Verification Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726049669_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitVerificationRequest_R_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitVerificationRequest_R_rel</relationshipLabel>
        <relationshipName>rel_1716726049669_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726063929_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitVerificationRequest_M_rel</label>
        <referenceTo>ssot__MemberPlan__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitVerificationRequest_M_rel</relationshipLabel>
        <relationshipName>rel_1716726063929_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726067839_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CoverageBenefitVerificationRequest_C_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CoverageBenefitVerificationRequest_C_rel</relationshipLabel>
        <relationshipName>rel_1716726067839_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>